--- a/home.html
+++ b/home.html
@@ -151,6 +151,9 @@
   </div>
   <!-- courses section ends -->
 
+  <!-- contact section starts -->
+  <!-- contact section ends -->
+
   <!-- custom js file link -->
   <script src="js/script.js"></script>
 </body>
