왼쪽 마진 없는거 수정

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
   <!-- home section ends -->
 
   <!-- couter section starts -->
-  <div class="count">
+  <section class="count">
     <div class="box-container">
       <div class="box">
         <i class="fas fa-graduation-cap"></i>
@@ -85,11 +85,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <!-- couter section ends -->
 
   <!-- about section starts -->
-  <div class="about" id="about">
+  <section class="about" id="about">
     <div class="row">
       <div class="image">
         <img src="images/obaasan_idea.png" alt="">
@@ -103,11 +103,11 @@
         <a href="#contact" class="btn">contact us</a>
       </div>
     </div>
-  </div>
+  </section>
   <!-- about section ends -->
 
   <!-- courses section starts -->
-  <div class="courses" id="courses">
+  <section class="courses" id="courses">
     <h1 class="heading">our <span>courses</span></h1>
     <div class="course-slider">
       <div class="w">
@@ -148,10 +148,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </section>
   <!-- courses section ends -->
 
   <!-- contact section starts -->
+  </section>
   <!-- contact section ends -->
 
   <!-- custom js file link -->
