--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         <a href="#courses">courses</a>
         <a href="#teachers">teachers</a>
         <a href="#reviews">reviews</a>
-        <a href="#contact">contact</a>
+        <a href="#contact">회원가입</a>
       </nav>
 
       <div id="menu-btn" class="fas fa-bars"></div>
@@ -45,7 +45,7 @@
     <div class="row">
       <div class="content">
         <h3>online <span>education</span></h3>
-        <a href="#contact" class="btn">contact us</a>
+        <a href="#contact" class="btn">회원가입</a>
       </div>
 
       <div class="image">
@@ -105,7 +105,7 @@
         <h3>why choose us?</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Non quaerat porro illum fugiat enim repellendus.</p>
-        <a href="#contact" class="btn">contact us</a>
+        <a href="#contact" class="btn">회원가입</a>
       </div>
     </div>
   </section>
@@ -160,6 +160,46 @@
   <!-- courses section ends -->
 
   <!-- contact section starts -->
+  <section class="contact" id="contact">
+    <h1 class="heading"><span>contact</span> us</h1>
+
+    <div class="row">
+      <div class="image">
+        <img src="images/car_drive_otoshiyori.png" alt="">
+      </div>
+
+      <form action="" method="post">
+        <span>your name</span>
+        <input type="text" required placeholder="enter your full name" maxlength="50" name="name" class="box">
+
+        <span>your email</span>
+        <input type="email" required placeholder="enter your valie email" maxlength="50" name="email" class="box">
+
+        <span>your number</span>
+        <input type="number" required placeholder="enter your valie number" maxlength="99999" min="0" name="number"
+          class="box" onkeypress="if(this.value.length == 10) return false;">
+
+        <span>select course</span>
+        <select name="couses" class="box" required>
+          <option value="" disabled selected>select the course --</option>
+          <option value="web development">web development</option>
+          <option value="science and biology">science and biology</option>
+          <option value="engineering">engineering</option>
+          <option value="digital marketing">digital marketing</option>
+          <option value="graphic design">graphic design</option>
+        </select>
+
+        <span>select gender</span>
+        <div class="radio">
+          <input type="radio" name="gender" value="male" id="male">
+          <label for="male">male</label>
+          <input type="radio" name="gender" value="female" id="female">
+          <label for="female">female</label>
+        </div>
+
+        <input type="submit" value="send message" class="btn" name="send">
+      </form>
+    </div>
   </section>
   <!-- contact section ends -->
 
