다했다 내용 수정 필요

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ULINULI</title>
+  <title>우리누리</title>
 
   <!-- swiper css link -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -28,10 +28,8 @@
 
       <nav class="navbar">
         <a href="#home">처음으로</a>
-        <a href="#about">자세히</a>
+        <a href="#about">정보</a>
         <a href="#courses">courses</a>
-        <a href="#teachers">teachers</a>
-        <a href="#reviews">reviews</a>
         <a href="#contact">회원가입</a>
       </nav>
 
@@ -44,7 +42,7 @@
   <section class="home" id="home">
     <div class="row">
       <div class="content">
-        <h3>online <span>education</span></h3>
+        <h3>우리<span>누리</span></h3>
         <a href="#contact" class="btn">회원가입</a>
       </div>
 
@@ -102,9 +100,8 @@
       </div>
 
       <div class="content">
-        <h3>why choose us?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Non quaerat porro illum fugiat enim repellendus.</p>
+        <h3>왜 우리누리를 선택하나요?</h3>
+        <p>모르겠어요!!!</p>
         <a href="#contact" class="btn">회원가입</a>
       </div>
     </div>
@@ -117,38 +114,38 @@
     <div class="swiper course-slider">
       <div class="swiper-wrapper">
         <div class="swiper-slide slide">
-          <img src="images/crossword_puzzle_oldman.png" alt="">
-          <h3>web development</h3>
+          <img src="images\clipboard4_check.png" alt="">
+          <h3>치매자가진단</h3>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, non.</p>
         </div>
 
         <div class="swiper-slide slide">
-          <img src="images/crossword_puzzle_oldwoman.png" alt="">
-          <h3>digital marketing</h3>
+          <img src="images/bowling_strike.png" alt="">
+          <h3>볼링놀이</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquid!</p>
         </div>
 
         <div class="swiper-slide slide">
           <img src="images/crossword_puzzle_oldman.png" alt="">
-          <h3>science and biology</h3>
+          <h3>십자말풀이</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquid!</p>
         </div>
 
         <div class="swiper-slide slide">
-          <img src="images/crossword_puzzle_oldwoman.png" alt="">
-          <h3>graphic design</h3>
+          <img src="images/sweets_marble_chocolate.png" alt="">
+          <h3>색구슬 맞추기</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquid!</p>
         </div>
 
         <div class="swiper-slide slide">
-          <img src="images/crossword_puzzle_oldman.png" alt="">
-          <h3>teaching</h3>
+          <img src="images/car_animals.png" alt="">
+          <h3>같은 동물 맞추기</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquid!</p>
         </div>
 
         <div class="swiper-slide slide">
-          <img src="images/crossword_puzzle_oldwoman.png" alt="">
-          <h3>engineering</h3>
+          <img src="images/job_syakai_fukushishi_woman.png" alt="">
+          <h3>치매센터</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, aliquid!</p>
         </div>
       </div>
